fix: change toList() to collectors and optimize imports